general search of agent through type of service
Now it is possible from 1 request to retrieve agents playing service type A, name N1; type A, name N2; type A, name N2... through the request services type A
+ small improvements of old classes